--- a/www/pages/edit_profile.html
+++ b/www/pages/edit_profile.html
@@ -51,8 +51,8 @@
           </li>
         </ul>
       </div>
-      <button class="button" onclick="editUserData()">Save</button>
-      <p id="error-message" style="color: red; text-align: center; padding-top: 8px;">this is an error message</p>
+      <button class="button button-fill button-round" onclick="editUserData()">Save</button>
+      <p id="error-message" style="color: red; text-align: center; padding-top: 8px;"></p>
     </div>
   </div>
 </div>
