Added Comments to events. its a little buggy tho.

--- a/www/pages/chat.html
+++ b/www/pages/chat.html
@@ -28,16 +28,16 @@
       <div class="right"><a href="#" class="link panel-open icon-only" data-panel="right"><i class="material-icons">people</i></a></div>
     </div>
   </div>
-  <div class="toolbar messagebar">
+  <div class="toolbar messagebar chat-messagebar">
     <div class="toolbar-inner">
       <div class="messagebar-area">
         <textarea class="resizable" placeholder="Message"></textarea>
-      </div><a class="link send-link" href="#">Send</a>
+      </div><a class="link send-link chat-send-link" href="#">Send</a>
     </div>
   </div>
   <div class="page-content messages-content infinite-scroll-content infinite-scroll-top">
     <div class="preloader infinite-scroll-preloader"></div>
-    <div class="messages">
+    <div class="messages chatroom-messages">
 
       <!-- Messages title -->
 
