--- a/www/index.html
+++ b/www/index.html
@@ -50,10 +50,10 @@
 
 
 
-          <a href="/welcome-page/" class="panel-close item-link no-chevron">
+          <a href="/new-school-page/" class="panel-close item-link no-chevron">
             <li class="item-content">
               <div class="item-media"><i class="material-icons">add</i></div>
-              <div class="item-inner">Welcome</div>
+              <div class="item-inner">New School</div>
             </li>
           </a>
 
