Welcome Page update

--- a/www/pages/welcome.html
+++ b/www/pages/welcome.html
@@ -10,21 +10,21 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <div class="slide-content">
-            <img src="media/people.jpg" width="100%" style="border-radius: 15px" />
+            <img src="media/welcome_screen_1.jpg" width="100%" style="border-radius: 15px" />
           </div>
           <div class="slide-description">
-            <h2>Connect App Vision</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor. </p>
+            <h2>Our Vision</h2>
+            <p>We designed this app to reduce bullying in schools by fostering a healthy and constructive community.</p>
 
           </div>
         </div>
         <div class="swiper-slide">
           <div class="slide-content">
-            <img src="media/people.jpg" width="100%" style="border-radius: 15px" />
+            <img src="media/welcome_screen_2.jpg" width="100%" style="border-radius: 15px" />
           </div>
           <div class="slide-description">
-            <h2>Connect App Vision</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor. </p>
+            <h2>Our Mission</h2>
+            <p>We hope you use this app to connect with your fellow classmates about school related topics and maybe send the occasional meme ;)</p>
 
           </div>
         </div>
@@ -63,13 +63,13 @@
                 </ul>
               </div>
               <div class="display-flex justify-content-center">
-                <button class="button button-fill button-round" style="width: 50vw" onclick="editUserData()">NEXT</button>
+                <button class="button button-fill button-round" style="width: 50vw" onclick="">NEXT</button>
               </div>
             </div>
           </div>
           <div class="slide-description">
             <h2>Info About You</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor. </p>
+            <p>Before you get started, we need some information about you.</p>
 
           </div>
         </div>
