--- a/www/index.html
+++ b/www/index.html
@@ -78,22 +78,14 @@
                     <h1 id="expandable-card-name" class="no-margin">Event Name that is really long.</h1>
                   </div>
                   <div class="col-25">
-                    <button class="button button-round button-fill" style="width: 100%">RSVP</button>
+                    <button id="rsvp" class="button button-round button-fill" style="width: 100%">RSVP</button>
                   </div>
                 </div>
                 <p id="expandable-card-description"> Lorum ipsum dolor sit amet concetur. Lorum ipsum dolor sit amet concetur. Lorum ipsum dolor sit amet concetur.</p>
               </div>
               <div class="block-title">Who's Going</div>
-              <div class="row justify-content-space-around">
-                <div class="attendee">
-                  <div class="pic"></div>
-                  <p>Bob Rosspool</p>
-                </div>
-                <div class="attendee">
-                  <div class="pic"></div>
-                  <p>Bob Rosspool</p>
+              <div id="attendees" class="row justify-content-space-around">
 
-                </div>
                 <div class="attendee">
                   <div class="pic"></div>
                   <p>Bob Rosspool</p>
@@ -306,15 +298,6 @@
               </div>
             </div>
           </div>
-
-
-
-
-
-
-
-
-
 
         </div>
       </div>
