--- a/www/pages/profile.html
+++ b/www/pages/profile.html
@@ -17,7 +17,7 @@
   </div>
   <div class="block no-margin-top">
     <div class="text-align-center no-margin-top">
-      <h2 class="profile-title">Bob Rosspool</h2>
+      <h2 class="profile-title">Bob wwww</h2>
 
       <p class="no-margin-top">Attends <a class="link">School Of Ross</a></p>
     </div>
@@ -25,7 +25,7 @@
   </div>
   <div class="list no-hairlines">
     <div class="block-title" style="margin-left: 16px">Friends</div>
-    <ul>
+    <ul id=friends>
       <a href="#" class="item-link no-chevron">
         <li class="item-content">
           <div class="item-media"><i class="material-icons">person</i></div>
