--- a/www/pages/chat.html
+++ b/www/pages/chat.html
@@ -2,6 +2,7 @@
   <div class="panel panel-right panel-reveal panel-resizable">
     <div class="list no-hairlines">
       <div class="list-title">Members</div>
+      <img id="test-image" />
       <ul>
         <a href="#" class="item-link no-chevron">
           <li class="item-content">
