--- a/www/pages/settings.html
+++ b/www/pages/settings.html
@@ -60,6 +60,56 @@
           </a>
         </ul>
       </div>
+      <div id="google_translate_element"></div>
+      <div class="block-title">Customization</div>
+      <div class="hairline"></div>
+      <div class="list no-hairlines no-margin-top no-margin-bottom">
+        <ul>
+          <a class="item-link sheet-open" href="#" data-sheet=".color-palette">
+            <li class="item-content">
+              <div class="item-media">
+                <div class="palette-preview"></div>
+              </div>
+              <div class="item-inner">Theme Color</div>
+            </li>
+          </a>
+
+        </ul>
+      </div>
+      <div class="list simple-list no-hairlines no-hairlines-between no-margin-top">
+        <ul>
+          <li>
+            <span>Dark Mode</span>
+            <label class="toggle toggle-init">
+              <input id="toggle-darkmode" type="checkbox" onclick="setDarkMode()">
+              <span class="toggle-icon"></span>
+            </label>
+          </li>
+        </ul>
+      </div>
     </div>
+
+    <!-- Color Palette Sheet Modal -->
+    <div class="sheet-modal color-palette" style="height: auto">
+      <div class="sheet-modal-inner">
+        <div class="page-content">
+          <div class="palette-container">
+            <div class="palette-item sheet-close" style="background-color: #ff3b30" onclick="setThemeColor('red')"></div>
+            <div class="palette-item sheet-close" style="background-color: #ff2d55" onclick="setThemeColor('pink')"></div>
+            <div class="palette-item sheet-close" style="background-color: #ff9500" onclick="setThemeColor('orange')"></div>
+            <div class="palette-item sheet-close" style="background-color: #cddc39" onclick="setThemeColor('lime')"></div>
+            <div class="palette-item sheet-close" style="background-color: #4cd964" onclick="setThemeColor('green')"></div>
+          </div>
+          <div class="palette-container">
+            <div class="palette-item sheet-close" style="background-color: #009688" onclick="setThemeColor('teal')"></div>
+            <div class="palette-item sheet-close" style="background-color: #2196f3" onclick="setThemeColor('blue')"></div>
+            <div class="palette-item sheet-close" style="background-color: #9c27b0" onclick="setThemeColor('purple')"></div>
+            <div class="palette-item sheet-close" style="background-color: #8e8e93" onclick="setThemeColor('gray')"></div>
+            <div class="palette-item sheet-close" style="background-color: #000000" onclick="setThemeColor('black')"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 </div>
