--- a/www/pages/welcome.html
+++ b/www/pages/welcome.html
@@ -49,7 +49,7 @@
                     <li>
                       <div class="item-content item-input">
                         <div class="item-media">
-                          <i class="icon demo-list-icon" id="demo-color-picker-palette-value"></i>
+                          <p><a class="button button-fill sheet-open" href="#" data-sheet=".color-palette">Color Theme</a></p>
                         </div>
                         <div class="item-inner">
                           <div class="item-input-wrap">
@@ -75,5 +75,28 @@
         </div>
       </div>
     </div>
+
+    <!-- Color Palette Sheet Modal -->
+    <div class="sheet-modal color-palette" style="height: auto">
+      <div class="sheet-modal-inner">
+        <div class="page-content">
+          <div class="palette-container">
+            <div class="palette-item sheet-close" style="background-color: #ff3b30" onclick="setThemeColor('red')"></div>
+            <div class="palette-item sheet-close" style="background-color: #ff2d55" onclick="setThemeColor('pink')"></div>
+            <div class="palette-item sheet-close" style="background-color: #ff9500" onclick="setThemeColor('orange')"></div>
+            <div class="palette-item sheet-close" style="background-color: #cddc39" onclick="setThemeColor('lime')"></div>
+            <div class="palette-item sheet-close" style="background-color: #4cd964" onclick="setThemeColor('green')"></div>
+          </div>
+          <div class="palette-container">
+            <div class="palette-item sheet-close" style="background-color: #009688" onclick="setThemeColor('teal')"></div>
+            <div class="palette-item sheet-close" style="background-color: #2196f3" onclick="setThemeColor('blue')"></div>
+            <div class="palette-item sheet-close" style="background-color: #9c27b0" onclick="setThemeColor('purple')"></div>
+            <div class="palette-item sheet-close" style="background-color: #8e8e93" onclick="setThemeColor('gray')"></div>
+            <div class="palette-item sheet-close" style="background-color: #000000" onclick="setThemeColor('black')"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 </div>
