fixed lazy chat load and got users in the chats to display

--- a/www/pages/chat.html
+++ b/www/pages/chat.html
@@ -3,7 +3,7 @@
     <div class="list no-hairlines">
       <div class="list-title">Members</div>
       <img id="test-image" />
-      <ul>
+      <ul id="chat-members">
         <a href="#" class="item-link no-chevron">
           <li class="item-content">
             <div class="item-media"><i class="material-icons">person</i></div>
